fonts fixed on smaller devices

--- a/think-differently/styles/Responsive.css
+++ b/think-differently/styles/Responsive.css
@@ -30,13 +30,14 @@
             font-size: 19px;
             text-align: center !important;
             margin-left: 100px !important;
-            margin-top: 0 !important;
+            margin-bottom: -10px !important;
       }
       .Col-1 h1 {
             font-size: 24px;
             text-transform: uppercase;
             font-weight: 900;
             padding-left: 30px;
+            margin-top: 20px !important;
       }
       .email {
             /* display: flex; */
