--- a/think-differently/styles/style.css
+++ b/think-differently/styles/style.css
@@ -83,12 +83,12 @@ body {
       font-family: MyriadPro;
       margin-top: -20px;
       font-size: 15px;
-      padding-bottom: 15px;
+      padding-bottom: 35px;
 }
 .Col-1 h1 {
       display: block;
       color: "#231f20" !important;
-      padding-top: 30px;
+      padding-top: 20px;
       padding-left: 120px;
       font-size: 36px;
 }
